# graphql

./: Cargo.toml  README.md
examples/trilogy/: Cargo.toml  schema.out
examples/trilogy/src/: main.rs
graphql/: Cargo.toml
graphql-macros/: Cargo.toml
graphql-macros/src/: ir.rs  lib.rs
graphql-tests/: Cargo.toml
graphql-tests/tests/: trilogy.rs
graphql/src/: execution.rs  lib.rs
graphql/src/parser/: lexer.rs  mod.rs  parse_base.rs  parse_idl.rs  parse_query.rs  token.rs
graphql/src/types/: mod.rs  query.rs  result.rs  schema.rs
graphql/src/validation/: mod.rs
src/: lib.rs
src/lexer/: mod.rs
src/parse_query/: mod.rs
src/parser/: lexer.rs  mod.rs  parse_base.rs  parse_idl.rs  parse_query.rs
src/types/: mod.rs  query.rs  result.rs  schema.rs
src/validation/: mod.rs
