[package]
name = "graphql-macros"
version = "0.1.0"
authors = ["Nick Cameron <ncameron@mozilla.com>"]

[lib]
proc-macro = true

[dependencies]
log = "0.4"
graphql = { path = "../graphql" }
rustfmt-nightly = { git = "https://github.com/rust-lang-nursery/rustfmt" , optional = true }

[features]
default = []
rustfmt = ["rustfmt-nightly"]

